[package]
name = "png22dj"
version = "0.1.0"
authors = ["Skye <me@skye.vg>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
imagequant = "4.3.0"
image = "0.25.0"
rgb = "0.8.37"
web-sys = { version = "0.3.69", features = ["ImageData"] }
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
